--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,9 +28,12 @@ constraintLayoutCompose = "1.0.1"
 coreTesting = "2.2.0"
 coroutines = "1.8.0"
 espresso = "3.5.1"
+firebaseAnalytics = "22.1.2"
 firebaseBom = "33.7.0"
+firebaseBomVersion = "32.2.3"
 glide = "1.0.0-beta01"
 googleServices = "4.4.2"
+googleServicesVersion = "4.4.3"
 gradle = "7.2.0"
 gradle-versions = "0.51.0"
 gson = "2.10.1"
@@ -101,8 +104,12 @@ androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "t
 androidx-test-uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiAutomator" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "work" }
 androidx-work-testing = { module = "androidx.work:work-testing", version.ref = "work" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics"}
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-bom-v3223 = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBomVersion" }
 glide = { module = "com.github.bumptech.glide:compose", version.ref = "glide" }
+#noinspection SimilarGradleDependency
+google-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 google-services = { module = "com.google.gms:google-services", version.ref = "googleServices" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
